--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,7 @@
-version: '3.9'
-
+version: "3.9"
 services:
   database:
     image: mysql:5.7
-    container_name: database
     environment:
       - MYSQL_ROOT_PASSWORD=P123456p
       - MYSQL_DATABASE=phonebook_db
@@ -11,36 +9,31 @@ services:
       - MYSQL_PASSWORD=Clarusway_1
     configs:
       - source: init_table
-        target: /docker-entrypoint-initdb.d/init_table
-
+        target: /docker-entrypoint-initdb.d/init.sql
     volumes:
-      - db-data:/var/lib/mysql    
+      - db-data:/var/lib/mysql
     networks:
       - clarus-net
 
   app-server:
     image: $ECR_REPO:latest
-    
     deploy:
       mode: global
-
       update_config:
         parallelism: 1
         delay: 5s
         order: start-first
-    
     ports:
       - "80:80"
     networks:
-      - clarus-net    
+      - clarus-net
 
 volumes:
   db-data:
 
 networks:
   clarus-net:
-    #driver: bridge
 
 configs:
   init_table:
-    file: ./init.sql    
+    file: ./init.sql
